...
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        app:layout_anchor="@+id/patient_form_activity_save_fab"
        app:layout_anchorGravity="top|center">

...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_personal_data_name_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_personal_data_name_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_personal_data_name" />

                <EditText
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_personal_data_birthday_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_personal_data_birthday_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_personal_data_birthday" />
                <EditText
                    android:id="@+id/patient_form_activity_personal_data_birthday"
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_anthropometry_height_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_anthropometry_height_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_anthropometry_height" />

                <EditText
...

                <Spinner
                    android:id="@+id/patient_form_activity_anthropometry_height_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_anthropometry_weight_current_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_anthropometry_weight_current_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_anthropometry_weight_current" />

                <EditText
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_anthropometry_weight_ideal_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_anthropometry_weight_ideal_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_anthropometry_weight_ideal" />

                <EditText
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_arm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_thigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_abdomen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_waist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_hip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/patient_form_activity_anthropometry_calculations_activity_level_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/patient_form_activity_anthropometry_calculations_activity_level_info_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/patient_form_activity_anthropometry_calculations_weight_lose_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/patient_form_activity_anthropometry_calculations_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
